Lesson 6.1.5 Complete - Generate Random World Cities

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d07c793d-113a-4e0b-911b-f53be774e228",
    "metadata": {},
    "outputs": [],
@@ -15,11 +15,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "301388f4-0fe0-48c2-8196-6b2925784425",
+   "execution_count": 10,
+   "id": "37e16371-850e-410d-bf86-10585c6888bb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use the citipy module to determine city based on latitude and longitude.\n",
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "301388f4-0fe0-48c2-8196-6b2925784425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coordinate in coordinates:\n",
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+   ]
   },
   {
    "cell_type": "code",
