--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -19,7 +19,10 @@
     "\n",
     "# Import the time library and the datetime module from the datetime library \n",
     "import time\n",
-    "from datetime import datetime"
+    "from datetime i\n",
+    "\n",
+    "# Import linear regression from the SciPy stats module.\n",
+    "from scipy.stats import linregress"
    ]
   },
   {
@@ -4067,11 +4070,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a8853f4e-3b04-47c5-a778-ca64eefd90b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import linregress\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Create a function to create perform linear regression on the weather data\n",
+    "# and plot a regression line and the equation with the data.\n",
+    "def plot_linear_regression(x_values, y_values, title, y_label, text_coordinates):\n",
+    "\n",
+    "    # Run regression on hemisphere weather data.\n",
+    "    (slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
+    "\n",
+    "    # Calculate the regression line \"y values\" from the slope and intercept.\n",
+    "    regress_values = x_values * slope + intercept\n",
+    "    # Get the equation of the line.\n",
+    "    line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "    # Create a scatter plot and plot the regression line.\n",
+    "    plt.scatter(x_values,y_values)\n",
+    "    plt.plot(x_values,regress_values,\"r\")\n",
+    "    # Annotate the text for the line equation.\n",
+    "    plt.annotate(line_eq, text_coordinates, fontsize=15, color=\"red\")\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel('Latitude')\n",
+    "    plt.ylabel(y_label)\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
